unpackaged/main/default/objects/Purge_Batch_Job__c/Purge_Batch_Job__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Purge Batch Job</label>
</CustomObject>