unpackaged/main/default/objects/Purge_Batch_Job__c/fields/Additional_Filter__c.field-meta.xml
<CustomField>
    <fullName>Additional_Filter__c</fullName>
    <label>Additional Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>