unpackaged/main/default/objects/Purge_Batch_Job__c/fields/Date_Filter__c.field-meta.xml
<CustomField>
    <fullName>Date_Filter__c</fullName>
    <defaultValue>&quot;CreatedDate&quot;</defaultValue>
    <description>API field name used in the query.</description>
    <inlineHelpText>API field name used in the query.</inlineHelpText>
    <label>Date Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>