unpackaged/main/default/objects/Purge_Batch_Job__c/fields/Number_of_Days_To_Purge__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_To_Purge__c</fullName>
    <description>Specify the age in days of records to purge. Anything older than the the days specified will be removed.</description>
    <inlineHelpText>Specify the age in days of records to purge. Anything older than the the days specified will be removed.</inlineHelpText>
    <label>Number of Days To Purge</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>