unpackaged/main/default/objects/Purge_Batch_Job__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Name of the objects that will be processed by the Purge Batch job</description>
    <inlineHelpText>Name of the objects that will be processed by the Purge Batch job</inlineHelpText>
    <label>Object API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>